[#IOCIT-9] Updated profile handlers to accept the new optional field from the profile model  (#255)
* edited profile handlers

* updated mocks and tests

* applied suggestions from PR

* updateProfile test cleanup

* updated io-functions-commons dependency

* Applied suggestions from PR
